--- a/App.xaml
+++ b/App.xaml
@@ -39,6 +39,14 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style x:Key="PasswordBoxStyle" TargetType="{x:Type PasswordBox}">
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderBrush" Value="#007BFF"/>
+            <Setter Property="MinWidth" Value="120"/>
+        </Style>
+
 
         <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
             <Setter Property="VerticalAlignment" Value="Center"/>
