--- a/Pages/CategoryPage.xaml
+++ b/Pages/CategoryPage.xaml
@@ -4,20 +4,19 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d"
-      Title="CategoryPage" Height="450" Width="800">
+      Title="Страница категории" Height="450" Width="800">
     <StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
-            <TextBox x:Name="SearchBox" Text="Search" Style="{StaticResource SearchTextBoxStyle}" />
-            <Button Content="Search" Click="SearchButton_Click" Style="{StaticResource ButtonStyle}" />
-            <Button Content="Show All" Click="ShowAllButton_Click" Style="{StaticResource ButtonStyle}" />
-            <Button Content="Sort by Name" Click="SortByNameButton_Click" Style="{StaticResource ButtonStyle}" />
+            <TextBox x:Name="SearchBox" Text="Поиск" Style="{StaticResource SearchTextBoxStyle}" GotFocus="SearchBox_GotFocus" LostFocus="SearchBox_LostFocus" />
+            <Button Content="Поиск" Click="SearchButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Сброс" Click="ShowAllButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Сортировка по name" Click="SortByNameButton_Click" Style="{StaticResource ButtonStyle}" Width="129" />
 
-            <Button Content="Sort by ID" Click="SortByIDButton_Click" Style="{StaticResource ButtonStyle}" />
-
-            <ComboBox x:Name="CategoryFilterComboBox" Style="{StaticResource ComboBoxStyle}" />
+            <Button Content="Сортировка по id" Click="SortByIDButton_Click" Style="{StaticResource ButtonStyle}" Width="115" />
+            <ComboBox x:Name="CategoryFilterComboBox" Style="{StaticResource ComboBoxStyle}" SelectionChanged="CategoryFilterComboBox_SelectionChanged" />
         </StackPanel>
 
-        <Button Content="Add Category" Click="AddCategoryButton_Click" Style="{StaticResource ButtonStyle}"
+        <Button Content="Добавить категорию" Click="AddCategoryButton_Click" Style="{StaticResource ButtonStyle}"
                 Height="40" />
 
         <ListView ItemsSource="{Binding Categories}" Margin="10" Height="300" Name="CategoryListView">
