--- a/LabelProductWindow.xaml
+++ b/LabelProductWindow.xaml
@@ -18,7 +18,7 @@
             <TextBlock Text="{Binding Material.Name}" Margin="5,0"/>
             <TextBlock Text="Категория:" FontWeight="Bold" Margin="0,10,0,0"/>
             <TextBlock Text="{Binding Category.Name}" Margin="5,0"/>
-            <Button Style="{StaticResource ButtonStyle}" Click="Button_Click">123</Button>
+            <Button Style="{StaticResource ButtonStyle}" Click="Button_Click">Экспорт</Button>
         </StackPanel>
     </StackPanel>
 </Window>
