--- a/Modals/AddCategoryModal.xaml
+++ b/Modals/AddCategoryModal.xaml
@@ -6,12 +6,20 @@
         mc:Ignorable="d"
         Title="AddCategoryModal" Height="200" Width="300">
     <StackPanel>
-        <Label Content="ADD CATEGORY" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Label Content="Category Name:" Margin="0 10 0 0"/>
-        <TextBox x:Name="CategoryNameTextBox" Margin="10"/>
+        <Label Content="Добавление категории" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
+
+        <!-- Применение стиля к Label -->
+        <Label Content="Название категории:" Margin="0 10 0 0"/>
+
+        <!-- Применение стиля к TextBox -->
+        <TextBox x:Name="CategoryNameTextBox" Margin="10" Style="{StaticResource TextBoxStyle}"/>
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Add" HorizontalAlignment="Center" Margin="10" Click="AddButton_Click" />
-            <Button Content="Cancel" HorizontalAlignment="Center" Margin="10" Click="CancelButton_Click" />
+            <!-- Применение стиля к Button -->
+            <Button Content="Добавить" HorizontalAlignment="Center" Margin="10" Click="AddButton_Click" Style="{StaticResource ButtonStyle}"/>
+
+            <!-- Применение стиля к Button -->
+            <Button Content="Отмена" HorizontalAlignment="Center" Margin="10" Click="CancelButton_Click" Style="{StaticResource ButtonStyle}"/>
         </StackPanel>
     </StackPanel>
 </Window>
