--- a/Modals/AddMaterialModal.xaml
+++ b/Modals/AddMaterialModal.xaml
@@ -4,16 +4,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="AddMaterialModal" Height="200" Width="300">
+        Title="AddMaterialModal" Height="332" Width="348">
     <StackPanel>
-        <Label Content="ADD MATERIAL" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Label Content="Name:" Margin="0 10 0 0"/>
-        <TextBox x:Name="MaterialNameTextBox" Margin="10"/>
-        <Label Content="Price:" Margin="0 10 0 0"/>
-        <TextBox x:Name="MaterialPriceTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <Label Content="Добавление материала" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
+
+        <!-- Применение стиля к Label -->
+        <Label Content="Название:" Margin="0 10 0 0"/>
+
+        <!-- Применение стиля к TextBox -->
+        <TextBox x:Name="MaterialNameTextBox" Margin="10" Style="{StaticResource TextBoxStyle}"/>
+
+        <!-- Применение стиля к Label -->
+        <Label Content="Цена:" Margin="0 10 0 0"/>
+
+        <!-- Применение стиля к TextBox -->
+        <TextBox x:Name="MaterialPriceTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" Style="{StaticResource TextBoxStyle}"/>
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Add" HorizontalAlignment="Center" Margin="10" Click="AddButton_Click" />
-            <Button Content="Cancel" HorizontalAlignment="Center" Margin="10" Click="CancelButton_Click" />
+            <!-- Применение стиля к Button -->
+            <Button Content="Добавить" Margin="10" Click="AddButton_Click" Style="{StaticResource ButtonStyle}" Height="28"/>
+
+            <!-- Применение стиля к Button -->
+            <Button Content="Отмена" HorizontalAlignment="Center" Margin="10" Click="CancelButton_Click" Style="{StaticResource ButtonStyle}"/>
         </StackPanel>
     </StackPanel>
 </Window>
