--- a/Modals/AddProductModal.xaml
+++ b/Modals/AddProductModal.xaml
@@ -5,24 +5,24 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:MedicalFurnitureAccounting.Modals"
         mc:Ignorable="d"
-        Title="AddProductModal" Height="450" Width="300">
+        Title="AddProductModal" Height="539" Width="300">
     <StackPanel>
-        <Label Content="ADD PRODUCT" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Label Content="Name:" Margin="0 10 0 0"/>
+        <Label Content="Добавление товара" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
+        <Label Content="Название:" Margin="0 10 0 0"/>
         <TextBox x:Name="ProductNameTextBox" Margin="10"/>
-        <Label Content="Category:"/>
+        <Label Content="Категория:"/>
         <ComboBox x:Name="CategoryComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
-        <Label Content="Supply:"/>
+        <Label Content="Поставщик:"/>
         <ComboBox x:Name="SupplyComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
-        <Label Content="Material:"/>
+        <Label Content="Материал:"/>
         <ComboBox x:Name="MaterialComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
-        <Label Content="Count:" Margin="0 10 0 0"/>
+        <Label Content="Количество:" Margin="0 10 0 0"/>
         <TextBox x:Name="ProductCountTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
-        <Label Content="Room:" Margin="0 10 0 0"/>
+        <Label Content="Комната:" Margin="0 10 0 0"/>
         <TextBox x:Name="ProductRoomTextBox" Margin="10"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
-            <Button Content="Add" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
-            <Button Content="Cancel" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
+            <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
+            <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
         </StackPanel>
     </StackPanel>
 </Window>
