--- a/Modals/AddSupplierModal.xaml
+++ b/Modals/AddSupplierModal.xaml
@@ -7,12 +7,12 @@
         mc:Ignorable="d"
         Title="AddSupplierModal" Height="200" Width="300">
     <StackPanel>
-        <Label Content="ADD SUPPLIER" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Label Content="Name:" Margin="0 10 0 0"/>
+        <Label Content="Добавление поставщика" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
+        <Label Content="Название:" Margin="0 10 0 0"/>
         <TextBox x:Name="SupplierNameTextBox" Style="{StaticResource TextBoxStyle}" Margin="10" />
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
-            <Button Content="Add" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
-            <Button Content="Cancel" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
+            <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
+            <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
         </StackPanel>
     </StackPanel>
 </Window>
