--- a/Modals/AddSupplyModal.xaml
+++ b/Modals/AddSupplyModal.xaml
@@ -7,14 +7,14 @@
         mc:Ignorable="d"
         Title="AddSupplyModal" Height="250" Width="300">
     <StackPanel>
-        <Label Content="ADD SUPPLY" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
-        <Label Content="Date:" Margin="0 10 0 0"/>
+        <Label Content="Добавление поставки" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
+        <Label Content="Дата:" Margin="0 10 0 0"/>
         <DatePicker x:Name="DatePicker" Margin="10"/>
-        <Label Content="Supplier:"/>
+        <Label Content="Поставка:"/>
         <ComboBox x:Name="SupplierComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
-            <Button Content="Add" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
-            <Button Content="Cancel" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
+            <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
+            <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
         </StackPanel>
     </StackPanel>
 </Window>
