--- a/Pages/ProductsPage.xaml
+++ b/Pages/ProductsPage.xaml
@@ -4,18 +4,27 @@
       Title="Products Page" Height="450" Width="800">
     <StackPanel Margin="10">
         <StackPanel Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
-            <TextBox x:Name="searchBox" Text="Search" Style="{StaticResource SearchTextBoxStyle}" />
-            <Button Content="Search" Click="SearchButton_Click" Style="{StaticResource ButtonStyle}" />
-            <Button Content="Show All" Click="ShowAllButton_Click" Style="{StaticResource ButtonStyle}" />
-            <Button Content="Sort by Name" Click="SortByNameButton_Click" Style="{StaticResource ButtonStyle}" />
+            <TextBox x:Name="searchBox" Text="Поиск" Style="{StaticResource SearchTextBoxStyle}" GotFocus="SearchBox_GotFocus" LostFocus="SearchBox_LostFocus" />
+            <Button Content="Поиск" Click="SearchButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Сброс" Click="ShowAllButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Сортировка по name" Click="SortByNameButton_Click" Style="{StaticResource ButtonStyle}" RenderTransformOrigin="0.5,0.5" Width="138" >
+                <Button.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="0.16"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Button.RenderTransform>
+            </Button>
 
-            <Button Content="Sort by ID" Click="SortByIDButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Сортировка по id" Click="SortByIDButton_Click" Style="{StaticResource ButtonStyle}" Width="122" />
 
-            <ComboBox x:Name="productsFilterComboBox" Style="{StaticResource ComboBoxStyle}" />
+            <ComboBox x:Name="productsFilterComboBox" Style="{StaticResource ComboBoxStyle}" SelectionChanged="ProductsFilterComboBox_SelectionChanged" />
 
         </StackPanel>
 
-        <Button Content="Add Product" Click="AddProductButton_Click" Style="{StaticResource ButtonStyle}"
+        <Button Content="Добавить товар" Click="AddProductButton_Click" Style="{StaticResource ButtonStyle}"
                 Height="40" />
 
         <ListView ItemsSource="{Binding Products}" Margin="10" Height="350" Name="productsListView">
@@ -31,14 +40,14 @@
                     <GridViewColumn Header="Room">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Change Room" Click="ChangeRoomButton_Click" Tag="{Binding ProductId}" />
+                                <Button Content="Change Room" Click="ChangeRoomButton_Click" Tag="{Binding ProductId}" Style="{StaticResource ButtonStyle}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Header="Label">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Ярлык" Tag="{Binding ProductId}" Click="Button_Click" />
+                                <Button Content="Ярлык" Tag="{Binding ProductId}" Click="Button_Click" Style="{StaticResource ButtonStyle}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
