--- a/Pages/SupplyPage.xaml
+++ b/Pages/SupplyPage.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <!-- Разместите здесь содержимое вашей страницы -->
         <StackPanel>
-            <Button Content="Add Supply" Click="AddSupplyButton_Click" Style="{StaticResource ButtonStyle}"
+            <Button Content="Добавить поставку" Click="AddSupplyButton_Click" Style="{StaticResource ButtonStyle}"
                     Height="40" Margin="10px" />
 
             <ListView ItemsSource="{Binding Supplies}" Margin="10" Height="350">
