--- a/App.xaml
+++ b/App.xaml
@@ -12,6 +12,7 @@
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="MinWidth" Value="100"/>
             <Setter Property="Margin" Value="5 0 5 0"/>
+            <Setter Property="Height" Value="30"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
