--- a/Pages/ProductsPage.xaml
+++ b/Pages/ProductsPage.xaml
@@ -26,7 +26,7 @@
 
         <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Center">
         <Button Content="Добавить товар" Click="AddProductButton_Click" Style="{StaticResource ButtonStyle}"/>
-        <Button Content="Инвенторизация" Click="ShowInventoryList_Click" Style="{StaticResource ButtonStyle}"/>
+        <Button Content="Инвентаризация" Click="ShowInventoryList_Click" Style="{StaticResource ButtonStyle}"/>
         </StackPanel>
 
         <ListView ItemsSource="{Binding Products}" Margin="10" Height="350" Name="productsListView">
